# kernel-matmul

./: .gitignore  .pre-commit-config.yaml  README.md  compile_commands.py  find_include_paths.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: fit_sine.py  matmul.py
kernel_matmul/: __init__.py  compile.py  configurations.py  linear_operator.py  make_ranges.py  native_function.py  ranges.py  util.py
kernel_matmul/gpytorch/: __init__.py  base.py  locally_periodic.py  rbf.py  spectral.py  sum.py
native/: kernel_matmul.cpp  kernel_matmul.cu  kernel_matmul.h  mosm_matmul.cpp  mosm_matmul.cu
native-old/: kernel_matmul.cu  mosm_matmul.cpp
native/bilinear_derivative/: bilinear_derivative.cpp  bilinear_derivative.cu  bilinear_derivative.h
native/common/: accessor.cuh  entrypoint.h  gpu_assert.cuh  kernel_function.cuh  utils.h
native/dense/: dense.cpp  dense.cu  dense.h
native/dense_bwd/: dense_bwd.cpp  dense_bwd.cu  dense_bwd.h
native/index/: index.cpp  index.cu  index.h
native/index_bwd/: index_bwd.cpp  index_bwd.cu  index_bwd.h
native/matmul/: matmul.cpp  matmul.cu  matmul.h
native/matmul_bwd/: matmul_bwd.cpp  matmul_bwd.cu  matmul_bwd.h
native/ranges/: ranges.cpp
native/row/: row.cpp  row.cu  row.h
pytest-randomly-torch/: .gitignore  pyproject.toml
pytest-randomly-torch/pytest_randomly_torch/: __init__.py
tests/: conftest.py  test_find_periodogram_peaks.py  test_linear_operator.py  test_ranges.py
tests/native/: test_bilinear_derivative.py  test_dense.py  test_dense_bwd.py  test_index.py  test_index_bwd.py  test_matmul.py  test_matmul_bwd.py  test_native_function.py  test_ranges.py  test_row.py
