[tool.poetry]
name = "kernel-matmul"
version = "0.1.0"
description = "Accelerated multiplications with kernel matrices"
authors = ["Turakar <turakar23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
