[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kernel-matmul"
version = "0.1.0"
description = "Accelerated multiplications with kernel matrices"
authors = ["Turakar <turakar23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
torch = "^2.1.1"
gpytorch = "^1.11"
pytest = "^7.4.3"
pytest-randomly = "^3.15.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
tqdm = "^4.66.1"
plotly = "^5.18.0"
pandas = "^2.1.3"
pytest-xdist = "^3.5.0"
pytest-repeat = "^0.9.3"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
